@@ -48,8 +48,6 @@ import java.awt.Component;
 import java.awt.Container;
 import java.awt.Dialog;
 import java.awt.EventQueue;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
@@ -562,17 +560,11 @@ final class TestStringWizardPanel extends JPanel {
                             "ACS_TestStringWizardPanel"));              //NOI18N
             
             panel.putClientProperty("WizardPanel_contentSelectedIndex", //NOI18N
-                                    new Integer(2));
+                                    Integer.valueOf(2));
             panel.setName(
                     NbBundle.getMessage(TestStringWizardPanel.class,
                                         "TXT_FoundMissingResource"));   //NOI18N
             panel.setPreferredSize(I18nWizardDescriptor.PREFERRED_DIMENSION);                    
-            panel.setLayout(new GridBagLayout());
-            GridBagConstraints constraints = new GridBagConstraints();
-            constraints.weightx = 1.0;
-            constraints.weighty = 1.0;
-            constraints.fill = GridBagConstraints.BOTH;
-            panel.add(getUI(), constraints);
             return panel;
         }
 
